--- a/package.json
+++ b/package.json
@@ -77,6 +77,7 @@
 		]
 	},
 	"dependencies": {
+		"boostrap": "^2.0.0",
 		"bootstrap": "^4.3.1",
 		"date-fns": "^2.16.1",
 		"prop-types": "^15.6.1",
