--- a/package.json
+++ b/package.json
@@ -82,8 +82,10 @@
 		"date-fns": "^2.16.1",
 		"prop-types": "^15.6.1",
 		"react": "^16.8.4",
-		"react-datepicker": "^3.4.1",
+		"react-collapsible": "^2.8.3",
+		"react-datepicker": "^3.6.0",
 		"react-dom": "^16.8.4",
+		"react-modal": "^3.12.1",
 		"react-polyfills": "0.0.1",
 		"react-router-dom": "^5.2.0"
 	}
