--- a/package.json
+++ b/package.json
@@ -87,6 +87,7 @@
 		"react-dom": "^16.14.0",
 		"react-modal": "^3.12.1",
 		"react-polyfills": "0.0.1",
-		"react-router-dom": "^5.2.0"
+		"react-router-dom": "^5.2.0",
+		"react-select": "^4.1.0"
 	}
 }
