--- a/package.json
+++ b/package.json
@@ -77,6 +77,7 @@
 		]
 	},
 	"dependencies": {
+		"@reduxjs/toolkit": "^1.5.0",
 		"boostrap": "^2.0.0",
 		"bootstrap": "^4.6.0",
 		"date-fns": "^2.17.0",
@@ -87,6 +88,7 @@
 		"react-dom": "^16.14.0",
 		"react-modal": "^3.12.1",
 		"react-polyfills": "0.0.1",
+		"react-redux": "^7.2.2",
 		"react-router-dom": "^5.2.0",
 		"react-select": "^4.1.0"
 	}
