--- a/package.json
+++ b/package.json
@@ -83,6 +83,7 @@
 		"date-fns": "^2.17.0",
 		"prop-types": "^15.7.2",
 		"react": "^16.14.0",
+		"react-bootstrap-validation": "^0.1.11",
 		"react-collapsible": "^2.8.3",
 		"react-datepicker": "^3.6.0",
 		"react-dom": "^16.14.0",
