--- a/package.json
+++ b/package.json
@@ -91,6 +91,7 @@
 		"react-polyfills": "0.0.1",
 		"react-redux": "^7.2.2",
 		"react-router-dom": "^5.2.0",
+		"react-scroll-to-top": "^1.0.5",
 		"react-select": "^4.1.0"
 	}
 }
