--- a/package.json
+++ b/package.json
@@ -88,6 +88,7 @@
 		"react-datepicker": "^3.6.0",
 		"react-dom": "^16.14.0",
 		"react-modal": "^3.12.1",
+		"react-paypal-button-v2": "^2.6.3",
 		"react-polyfills": "0.0.1",
 		"react-redux": "^7.2.2",
 		"react-router-dom": "^5.2.0",
