--- a/package.json
+++ b/package.json
@@ -40,7 +40,7 @@
 		"css-loader": "^2.1.1",
 		"dotenv-webpack": "^1.8.0",
 		"envfile": "^3.1.0",
-		"error-overlay-webpack-plugin": "^0.2.0",
+		"error-overlay-webpack-plugin": "^0.4.2",
 		"eslint": "^4.19.1",
 		"eslint-loader": "^2.2.1",
 		"eslint-plugin-react": "^7.22.0",
@@ -81,6 +81,7 @@
 		"boostrap": "^2.0.0",
 		"bootstrap": "^4.6.0",
 		"date-fns": "^2.17.0",
+		"emailjs-com": "^2.6.4",
 		"prop-types": "^15.7.2",
 		"react": "^16.14.0",
 		"react-bootstrap-validation": "^0.1.11",
